# data_analyser

./: .env  analyze_data.py  main.py  pyproject.toml  requirements.txt  sample.txt  test_agent.py
data/: Office Data_ Expanded.xlsx  building_data.csv
